--- a/index.html
+++ b/index.html
@@ -1,1 +1,200 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ВАКЛИДЕР — Публикация статьи за 16 часов</title>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
+      background: #f8fafc;
+      margin: 0;
+      padding: 16px;
+      color: #2d3748;
+    }
+    .container {
+      max-width: 500px;
+      margin: 0 auto;
+      background: white;
+      border-radius: 20px;
+      padding: 24px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.06);
+      border: 1px solid #edf2f7;
+    }
+    .logo {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    .logo h1 {
+      font-size: 26px;
+      margin: 0;
+      color: #179CDE;
+      font-weight: 700;
+    }
+    .tagline {
+      text-align: center;
+      color: #e63946;
+      font-weight: bold;
+      font-size: 19px;
+      margin: 10px 0 24px;
+      line-height: 1.3;
+    }
+    .promo {
+      background: #fff8e1;
+      border: 1px solid #ffd54f;
+      border-radius: 12px;
+      padding: 14px;
+      margin: 16px 0 24px;
+      font-weight: 600;
+      color: #5d4037;
+      text-align: center;
+      box-shadow: 0 2px 4px rgba(255,193,7,0.2);
+    }
+    .promo strong {
+      color: #d35400;
+    }
+    label {
+      display: block;
+      margin: 16px 0 8px;
+      font-weight: 600;
+      color: #2d3748;
+      font-size: 15px;
+    }
+    select, input {
+      width: 100%;
+      padding: 14px;
+      border: 1px solid #cbd5e0;
+      border-radius: 12px;
+      font-size: 16px;
+      box-sizing: border-box;
+      background: #fafafa;
+      transition: border-color 0.2s;
+    }
+    select:focus, input:focus {
+      outline: none;
+      border-color: #179CDE;
+      background: white;
+    }
+    button {
+      background: #179CDE;
+      color: white;
+      border: none;
+      border-radius: 12px;
+      padding: 16px;
+      width: 100%;
+      font-size: 17px;
+      font-weight: 600;
+      margin: 20px 0;
+      box-shadow: 0 4px 6px rgba(23, 156, 222, 0.25);
+      transition: background 0.2s, transform 0.1s;
+    }
+    button:active {
+      transform: scale(0.98);
+    }
+    #result {
+      text-align: center;
+      font-size: 20px;
+      font-weight: 700;
+      color: #179CDE;
+      margin: 20px 0;
+      min-height: 28px;
+    }
+    .footer-note {
+      font-size: 12px;
+      color: #718096;
+      text-align: center;
+      margin-top: 20px;
+      line-height: 1.4;
+    }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="logo">
+      <h1>ВАКЛИДЕР</h1>
+    </div>
+    <div class="tagline">Публикация в ВАК / РИНЦ<br>за 16 часов*</div>
+
+    <div class="promo">
+      🎁 На <strong>каждую третью статью</strong> —<br><strong>скидка 50%!</strong>
+    </div>
+
+    <label>Где публиковать?</label>
+    <select id="journal">
+      <option>Журнал ВАК РФ</option>
+      <option>Журнал РИНЦ</option>
+    </select>
+
+    <label>Объём статьи (страниц)</label>
+    <input type="number" id="pages" min="5" value="15" placeholder="Например: 15">
+
+    <label>Сроки</label>
+    <select id="urgency">
+      <option>Экспресс (16 часов)</option>
+      <option>Стандарт (7–14 дней)</option>
+    </select>
+
+    <button onclick="showPrice()">Узнать стоимость</button>
+    <div id="result"></div>
+
+    <h2 style="font-size: 19px; margin: 28px 0 16px; font-weight: 600; color: #2d3748;">Оставить заявку</h2>
+    
+    <label>Ваше имя</label>
+    <input type="text" id="name" placeholder="Имя и фамилия">
+
+    <label>Telegram или email</label>
+    <input type="text" id="contact" placeholder="@username или email@example.com">
+
+    <button onclick="submitForm()">Отправить заявку</button>
+
+    <p class="footer-note">
+      * по отдельным гуманитарным и экономическим специальностям<br>
+      Официальный договор, акт, счёт. Поддержка до публикации.
+    </p>
+  </div>
+
+  <script>
+    // Инициализация Telegram WebApp
+    if (window.Telegram && Telegram.WebApp) {
+      Telegram.WebApp.expand();
+      Telegram.WebApp.setHeaderColor('#179CDE');
+      Telegram.WebApp.setBackgroundColor('#f8fafc');
+      Telegram.WebApp.ready();
+    }
+
+    function showPrice() {
+      const journal = document.getElementById('journal').value;
+      const pages = parseInt(document.getElementById('pages').value) || 15;
+      const urgency = document.getElementById('urgency').value;
+
+      let base = journal === 'Журнал ВАК РФ' ? 12000 : 8000;
+      if (urgency === 'Экспресс (16 часов)') base = Math.round(base * 1.4);
+
+      const price = pages < 10 ? base : base + (pages - 10) * 800;
+      document.getElementById('result').innerText = `Стоимость: ${price.toLocaleString()} ₽`;
+    }
+
+    function submitForm() {
+      const name = document.getElementById('name').value;
+      const contact = document.getElementById('contact').value;
+      if (!name || !contact) {
+        if (window.Telegram && Telegram.WebApp) {
+          Telegram.WebApp.showAlert('Пожалуйста, укажите имя и контакт!');
+        } else {
+          alert('Пожалуйста, укажите имя и контакт!');
+        }
+        return;
+      }
+
+      if (window.Telegram && Telegram.WebApp) {
+        Telegram.WebApp.showAlert('Спасибо! Специалист свяжется с вами в течение 15 минут.');
+        // Позже: можно добавить отправку в Google Таблицу
+      } else {
+        alert('Ваша заявка принята! Ожидайте связи.');
+      }
+    }
+  </script>
+</body>
+</html>
 
